--- a/index.html
+++ b/index.html
@@ -180,7 +180,23 @@
     <p class="setup-similar-label">Петр Петров</p>
   </div>
 </template>
-
+<script>
+  fireballSize = 22;
+  getFireballSpeed = function(left){
+    return left? 5 : 2;
+  };
+  wizardSpeed = 3;
+  wizardWidth = 70;
+  getWizardHeight = function() {
+    return 1.337 * wizardWidth;
+  };
+  getWizardX = function(width) {
+    return width/2 - wizardWidth/2;
+  };
+  getWizardY = function(height) {
+    return (height/3)*2;
+  }
+</script>
 <script src="js/game.js"></script>
 
 </body>
