--- a/index.html
+++ b/index.html
@@ -181,20 +181,24 @@
   </div>
 </template>
 <script>
-  fireballSize = 22;
-  getFireballSpeed = function(left){
-    return left? 5 : 2;
+  var fireballSize = 22;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
+
+  var getFireballSpeed = function (left){
+    return left ? 5 : 2;
   };
-  wizardSpeed = 3;
-  wizardWidth = 70;
-  getWizardHeight = function() {
+
+  var getWizardHeight = function () {
     return 1.337 * wizardWidth;
   };
-  getWizardX = function(width) {
-    return width/2 - wizardWidth/2;
+
+  var getWizardX = function (width) {
+    return width / 2 - wizardWidth / 2;
   };
-  getWizardY = function(height) {
-    return (height/3)*2;
+
+  var getWizardY = function (height) {
+    return height / 3 - getWizardHeight();
   }
 </script>
 <script src="js/game.js"></script>
