--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
       };
 
       var getWizardY = function (height) {
-        return height / 3 - getWizardHeight();
-      }
+        return height / 3 - getWizardHeight() / 2;
+      };
     </script>
     <script src="js/stat.js"></script>
     <script src="js/game.js"></script>
