--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
     <script src="js/stat.js"></script>
     <script src="js/game.js"></script>
     <script src="js/setup.js"></script>
-    <script src="js/colorize.js"></script>
+   <!--<script src="js/colorize.js"></script>-->
+    <script src="js/colorize-element.js"></script>
     <script src="js/dialog.js"></script>
   </body>
 </html>
