--- a/index.html
+++ b/index.html
@@ -211,5 +211,6 @@
    <!--<script src="js/colorize.js"></script>-->
     <script src="js/colorize-element.js"></script>
     <script src="js/dialog.js"></script>
+    <script src="js/wizard.js"></script>
   </body>
 </html>
